--- a/index.html
+++ b/index.html
@@ -46,28 +46,49 @@
             topic: "Third Week End Work"
         }];
 
-    for (let task of tasks) {
-        let startHour = Math.floor(Math.random() * 11 + 12);
-        let startMinute = Math.floor(Math.random() * 59);
+        for (let task of tasks) {
+            let startHour = Math.floor(Math.random() * 11 + 12);
+            let startMinute = Math.floor(Math.random() * 59);
 
-        let endHour = Math.floor(Math.random() * 24);
-        let endMinute = Math.floor(Math.random() * 59);
+            let endHour = Math.floor(Math.random() * 24);
+            let endMinute = Math.floor(Math.random() * 59);
 
-        let startDay = Math.floor(Math.random() * 31 + 1);
-        let endDay = (startHour >= endHour)? startDay+1 : startDay;
+            let startDay = Math.floor(Math.random() * 31 + 1);
+            let endDay = (startHour >= endHour) ? startDay + 1 : startDay;
 
-        task.startedAt = new Date(2021, 0,startDay, startHour, startMinute);
-        task.finishedAt= new Date(2021, 0, endDay, endHour, endMinute)
-        task.tasksGiven = Math.floor(Math.random() * 20 + 1);
-        task.tasksFinished = Math.floor(Math.random() * task.tasksGiven + 1);
+            task.startedAt = new Date(2021, 0, startDay, startHour, startMinute);
+            task.finishedAt = new Date(2021, 0, endDay, endHour, endMinute)
+            task.tasksGiven = Math.floor(Math.random() * 20 + 1);
+            task.tasksFinished = Math.floor(Math.random() * task.tasksGiven + 1);
+        }
+    
+
+    function calculateTimeOfWork(task) {
+        let timeDifference = task.finishedAt - task.startedAt; // difference is millisecond.
+        timeDifference /= 1000; // difference in seconds
+        timeDifference /= 60; // difference in minutes
+        timeDifference /= 60; // difference in hours
+        timeDifference = timeDifference.toFixed(1); // round the number to a max of one decimal. 
+        task['totalTime'] = timeDifference; // different writing style for practice.
+    }
+
+    function calculateTasksFinishedPercent(task){
+        task.tasksFinishedPercent = Math.floor (task.tasksFinished*100/task.tasksGiven);
     }
 
     for (let task of tasks) {
-        for (let prop in task)
-        body.write(task[prop]);
-        document.write("<br>");
+        calculateTimeOfWork(task);
+        document.write(task.totalTime + "<br>");
+        calculateTasksFinishedPercent(task);
+        document.write(task.tasksFinishedPercent + "% ׂ<br>");
     }
-
+/*
+         *
+                for (let prop in task)
+                document.write(task[prop]);
+                document.write("<br>");
+        */
 </script>
+
 
 </html>
